# yaml-split

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  about.hbs  about.toml  invalid.yaml  stream-utf16be.yaml  stream-utf32le.yaml  stream.yaml
.github/workflows/: archives.yml  branch.yml  build-release-archives.yml  deep-tests.yml  deep.yml  main-tests.yml  main.yml  miri.yml  process.yml  release-process.yml  release.yml
Formula/: yaml-split.rb
doc/: RELEASE-README.txt  RELEASE.txt  yaml-split.1
src/: buffer.rs  chunk.rs  chunker.rs  encode.rs  encoding.rs  hello-utf16le.txt  hello-utf32be.txt  hello.txt  main.rs  split.rs
