[package]
name = "yaml-split"
version = "0.1.0"
edition = "2021"

[dependencies]
unsafe-libyaml = "0.2.9"

[dependencies.clap]
version = "3.2.25"
default-features = false
features = ["std", "derive", "cargo"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[dev-dependencies]
hex-literal = "0.4.1"
