[package]
name = "yaml-split"
version = "0.1.6"
edition = "2021"

[dependencies]
unsafe-libyaml = "0.2.9"

[dependencies.clap]
version = "4.4.11"
default-features = false
features = ["std", "derive", "help", "usage"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[dev-dependencies]
hex-literal = "0.4.1"
