[package]
name = "yaml-split"
version = "0.1.17"
license = "MIT"
edition = "2021"
rust-version = "1.70.0"
repository = "https://github.com/ahamlinman/yaml-split"

[dependencies]
unsafe-libyaml = "0.2.9"

[dependencies.clap]
version = "4.4.11"
default-features = false
features = ["std", "derive", "help", "usage"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[dev-dependencies]
hex-literal = "0.4.1"

[profile.release]
panic = "abort"

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
